# lurk

./: .gitignore  CHANGELOG.md  IDEAS.md  LURK_CLI.md  README.md  lurk.cabal
Lurk/: App.hs  Assets.hs  CSRF.hs  Cloudflare.hs  Cookie.hs  Core.hs  DB.hs  Deploy.hs  Env.hs  Error.hs  Flash.hs  Form.hs  Html.hs  Language.hs  Log.hs  Prelude.hs  QQ.hs  Request.hs  Routes.hs  SEO.hs  Session.hs  SessionMiddleware.hs  Validate.hs  View.hs
Lurk/DB/: Config.hs  Core.hs  Error.hs  Log.hs  Migration.hs  Pool.hs  Postgres.hs  QQ.hs  SQLite.hs  TH.hs  Transaction.hs
Lurk/Deploy/: Docker.hs  SSH.hs  Shell.hs
Lurk/Email/: SMTP.hs
Lurk/Language/: Detect.hs
Lurk/Routes/: Security.hs
Lurk/Session/: Middleware.hs
cli/: Log.hs  Main.hs  Shared.hs
cli/Commands/: AddEmail.hs  AddForm.hs  AddPage.hs  Deploy.hs  Kill.hs  New.hs  Run.hs
cli/Commands/Deploy/: Core.hs  Docker.hs  SSH.hs  Shell.hs
docs/: IDEAS.md  LURK Analysis.md  deferred-ideas.md  roadmap.md  v1-readiness-analysis.md
docs/plans/: Implementation Plan.md  Versioned backups.md  auth-scope.md  important-fixes.md  log-improvements.md  scaffolding.md  session.md
templates/add/page/: Locale.hs  View.hs
templates/web/: Language.hs  Main.hs  Paths.hs  Router.hs
templates/web/Locale/: Home.hs  Partial.hs
templates/web/View/: Home.hs  Partial.hs
templates/website/: Main.hs  Paths.hs  Router.hs  env.example  project.cabal
templates/website/Controller/: Static.hs
templates/website/Locale/: Home.hs
templates/website/View/: Partial.hs  Prelude.hs
templates/website/View/Layout/: Default.hs
templates/website/public/: llms.txt  robots.txt  sitemap.xml
templates/website/public/css/: common.css
templates/website/public/js/: common.js
test/: CSRFSpec.hs  DBSpec.hs  ErrorSpec.hs  FlashSpec.hs  LanguageSpec.hs  LogSpec.hs  Main.hs  QQSpec.hs  RequestSpec.hs  SMTPSpec.hs  SecuritySpec.hs  SessionSpec.hs  ValidateSpec.hs
