cabal-version:      3.0
name:               lurk
version:            0.1.0.0
synopsis:           Lean Unified Rendering Kernel: A lightweight, compile-time safe web framework
license:            MIT
author:             Lurk Team
build-type:         Simple

library
    default-language: GHC2021
    default-extensions: OverloadedStrings
                        DeriveDataTypeable
                        DeriveGeneric
                        QuasiQuotes
                        TemplateHaskell
                        DataKinds
                        TypeApplications
                        DuplicateRecordFields
                        ImplicitParams
    hs-source-dirs:   .

    exposed-modules:  Lurk.Prelude
                      Lurk.App
                      Lurk.Assets
                      Lurk.Cookie
                      Lurk.CSRF
                      Lurk.Email.SMTP
                      Lurk.Env
                      Lurk.Flash
                      Lurk.Form
                      Lurk.Log
                      Lurk.Html
                      Lurk.Language
                      Lurk.QQ
                      Lurk.Routes
                      Lurk.Request
                      Lurk.SEO
                      Lurk.Session
                      Lurk.Session.Middleware
                      Lurk.Deploy
                      Lurk.Deploy.SSH
                      Lurk.Deploy.Docker
                      Lurk.Deploy.Shell

    build-depends:
                      base >=4.17.2.1,
                      scotty,
                      text,
                      containers,
                      mtl,
                      megaparsec >= 9.0 && < 9.8,
                      template-haskell,
                      directory,
                      filepath,
                      time,
                      wai,
                      http-types,
                      bytestring,
                      haskell-src-meta,
                      syb,
                      wai-middleware-static,
                      entropy,
                      stm,
                      wai-extra,
                      network,
                      cookie,
                      case-insensitive,
                      aeson,
                      yaml,
                      vector,
                      process,
                      connection,
                      temporary,
                      process

executable lurk
    default-language: GHC2021
    default-extensions: OverloadedStrings
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    main-is:          Main.hs
    data-dir:         .
    other-modules:    Log,
                      Paths_lurk
    autogen-modules:  Paths_lurk
    data-files:       templates/website/Main.hs
                      templates/website/Router.hs
                      templates/website/Language.hs
                      templates/website/Paths.hs
                      templates/website/cabal.project
                      templates/website/project.cabal
                      templates/website/Controller/Static.hs
                      templates/website/Locale/Prelude.hs
                      templates/website/Locale/Partial.hs
                      templates/website/Locale/Home.hs
                      templates/website/View/Prelude.hs
                      templates/website/View/Home.hs
                      templates/website/View/Partial.hs
                      templates/website/View/Layout/Default.hs
                      templates/website/public/css/common.css
                      templates/website/public/js/common.js
    hs-source-dirs:   cli
    build-depends:    base ^>=4.17.2.1,
                      directory,
                      filepath,
                      text,
                      process,
                      aeson,
                      yaml,
                      bytestring,
                      containers,
                      temporary,
                      lurk,
                      ansi-terminal

test-suite lurk-tests
    type:             exitcode-stdio-1.0
    default-language: GHC2021
    default-extensions: OverloadedStrings
    main-is:          Main.hs
    other-modules:    SessionSpec
                      CSRFSpec
                      SMTPSpec
                      FlashSpec
                      RequestSpec
    hs-source-dirs:   test
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base >=4.17.2.1,
                      lurk,
                      tasty,
                      tasty-hunit,
                      text,
                      bytestring,
                      containers,
                      time,
                      directory,
                      filepath,
                      entropy,
                      stm
