cabal-version:      3.0
name:               lurk
version:            0.1.0.0
synopsis:           Lean Unified Rendering Kernel: A lightweight, compile-time safe web framework
license:            MIT
author:             Lurk Team
build-type:         Simple

extra-source-files: templates/website/Main.hs
                    templates/website/Router.hs
                    templates/website/Language.hs
                    templates/website/Paths.hs
                    templates/website/cabal.project
                    templates/website/project.cabal
                    templates/website/env.example
                    templates/website/Controller/Static.hs
                    templates/website/Locale/Prelude.hs
                    templates/website/Locale/Partial.hs
                    templates/website/Locale/Home.hs
                    templates/website/View/Prelude.hs
                    templates/website/View/Home.hs
                    templates/website/View/Partial.hs
                    templates/website/View/Layout/Default.hs
                    templates/website/public/css/common.css
                    templates/website/public/js/common.js
                    templates/website/public/robots.txt
                    templates/website/public/sitemap.xml
                    templates/website/public/llms.txt
                    templates/add/page/Locale.hs
                    templates/add/page/View.hs

library
    default-language: GHC2021
    default-extensions: OverloadedStrings
                        DeriveDataTypeable
                        DeriveGeneric
                        QuasiQuotes
                        TemplateHaskell
                        DataKinds
                        TypeApplications
                        DuplicateRecordFields
                        ImplicitParams
    hs-source-dirs:   .
    other-modules:    Lurk.Core

    exposed-modules:  Lurk.Prelude
                      Lurk.App
                      Lurk.Assets
                      Lurk.Cloudflare
                      Lurk.Cookie
                      Lurk.CSRF
                      Lurk.Email.SMTP
                      Lurk.Env
                      Lurk.Error
                      Lurk.Flash
                      Lurk.Form
                      Lurk.Log
                      Lurk.Html
                      Lurk.Language
                      Lurk.Language.Detect
                      Lurk.QQ
                      Lurk.Routes
                      Lurk.Routes.Security
                      Lurk.Request
                      Lurk.SEO
                      Lurk.Session
                      Lurk.Session.Middleware
                      Lurk.Deploy
                      Lurk.Deploy.SSH
                      Lurk.Deploy.Docker
                      Lurk.Deploy.Shell

    build-depends:
                      base >=4.17.2.1,
                      scotty,
                      text,
                      containers,
                      megaparsec >= 9.0 && < 9.8,
                      template-haskell,
                      directory,
                      filepath,
                      time,
                      wai,
                      warp,
                      http-types,
                      bytestring,
                      haskell-src-meta,
                      wai-middleware-static,
                      entropy,
                      stm,
                      wai-extra,
                      vault >= 0.3,
                      case-insensitive,
                      aeson,
                      yaml,
                      vector,
                      process,
                      connection,
                      temporary

    if !os(windows)
        build-depends: unix


executable lurk
    default-language: GHC2021
    default-extensions: OverloadedStrings
                        TemplateHaskell
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    main-is:          Main.hs
    other-modules:    Log
                      Shared
                      Commands.Kill
                      Commands.Deploy
                      Commands.New
                      Commands.AddPage
    hs-source-dirs:   cli
    build-depends:    base ^>=4.17.2.1,
                      directory,
                      filepath,
                      text,
                      process,
                      aeson,
                      yaml,
                      bytestring,
                      containers,
                      temporary,
                      lurk,
                      ansi-terminal,
                      file-embed,
                      template-haskell

test-suite lurk-tests
    type:             exitcode-stdio-1.0
    default-language: GHC2021
    default-extensions: OverloadedStrings
    main-is:          Main.hs
    other-modules:    SessionSpec
                      CSRFSpec
                      SMTPSpec
                      FlashSpec
                      RequestSpec
                      QQSpec
                      LogSpec
                      SecuritySpec
                      ErrorSpec
                      LanguageSpec
    hs-source-dirs:   test
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base >=4.17.2.1,
                      lurk,
                      tasty,
                      tasty-hunit,
                      text,
                      bytestring,
                      containers,
                      time,
                      directory,
                      filepath,
                      entropy,
                      stm,
                      temporary,
                      aeson,
                      wai,
                      wai-extra,
                      http-types
